--- a/Unit 3 Lesson 3.4.ipynb
+++ b/Unit 3 Lesson 3.4.ipynb
@@ -16,24 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rawData' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-91b6d8293ec9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrawData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mchisquare\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchisquare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rawData' is not defined"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADYlJREFUeJzt3XGonXd9x/H3p4md2+x0LFeQJjGFpWBwY8qlK/jHullH\nWkfyh5skUDZHMeBWGWtxVBydq//MFdwYZNNsE51Da/QPuWgkG64iiOl6S7Us6SqX2NnUQaPWgojW\nuu/+OKdyPN7kPjc5957eb98vuHCe5/w85/twbt99fM49p6kqJEm9XDHvASRJs2fcJakh4y5JDRl3\nSWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1tH1eT7xjx47as2fPvJ5ekrakBx988JtVtbDWurnFfc+e\nPSwvL8/r6SVpS0ryP0PWeVlGkhoy7pLUkHGXpIaMuyQ1ZNwlqaE1457kg0meTPJfF7g/Sf4uyUqS\nh5O8dvZjSpLWY8iZ+4eA/Re5/yZg7/jnCPAPlz+WJOlyrBn3qvoC8O2LLDkI/EuNnAJeluQVsxpQ\nkrR+s7jmfjXw+MT2ufE+SdKcbOonVJMcYXTpht27d2/mU2sL2nPnZ+byvI/91Rvn8rzSLM3izP0J\nYNfE9s7xvp9SVceqarGqFhcW1vxqBEnSJZpF3JeA3x//1cz1wNNV9b8zeFxJ0iVa87JMko8BNwA7\nkpwD/gJ4EUBVvR84AdwMrADfA/5wo4aVJA2zZtyr6vAa9xfwxzObSJJ02fyEqiQ1ZNwlqSHjLkkN\nGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SG\njLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JD\nxl2SGjLuktSQcZekhgbFPcn+JI8mWUly5yr3705yX5KHkjyc5ObZjypJGmrNuCfZBhwFbgL2AYeT\n7Jta9ufA8ap6DXAI+PtZDypJGm7Imft1wEpVna2qZ4B7gYNTawr4hfHtlwLfmN2IkqT12j5gzdXA\n4xPb54Bfn1rzbuDfkrwd+HngxplMJ0m6JLN6Q/Uw8KGq2gncDHwkyU89dpIjSZaTLJ8/f35GTy1J\nmjYk7k8Auya2d473TboVOA5QVV8CXgzsmH6gqjpWVYtVtbiwsHBpE0uS1jQk7g8Ae5Nck+RKRm+Y\nLk2t+TrweoAkr2IUd0/NJWlO1ox7VT0L3AacBB5h9Fcxp5PcneTAeNkdwFuTfAX4GPCWqqqNGlqS\ndHFD3lClqk4AJ6b23TVx+wzwutmOJkm6VH5CVZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrI\nuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk\n3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoa\nFPck+5M8mmQlyZ0XWPPmJGeSnE7y0dmOKUlaj+1rLUiyDTgKvAE4BzyQZKmqzkys2Qu8E3hdVT2V\n5OUbNbAkaW1DztyvA1aq6mxVPQPcCxycWvNW4GhVPQVQVU/OdkxJ0noMifvVwOMT2+fG+yZdC1yb\n5ItJTiXZP6sBJUnrt+ZlmXU8zl7gBmAn8IUkv1JV35lclOQIcARg9+7dM3pqSdK0IWfuTwC7JrZ3\njvdNOgcsVdUPq+prwFcZxf4nVNWxqlqsqsWFhYVLnVmStIYhcX8A2JvkmiRXAoeApak1n2J01k6S\nHYwu05yd4ZySpHVYM+5V9SxwG3ASeAQ4XlWnk9yd5MB42UngW0nOAPcB76iqb23U0JKkixt0zb2q\nTgAnpvbdNXG7gNvHP5KkOfMTqpLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQ\ncZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrI\nuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGhoU9yT7kzyaZCXJnRdZ\n96YklWRxdiNKktZrzbgn2QYcBW4C9gGHk+xbZd1VwJ8A9896SEnS+gw5c78OWKmqs1X1DHAvcHCV\nde8B3gt8f4bzSZIuwZC4Xw08PrF9brzvx5K8FthVVZ+Z4WySpEt02W+oJrkCeB9wx4C1R5IsJ1k+\nf/785T61JOkChsT9CWDXxPbO8b7nXAW8Gvh8kseA64Gl1d5UrapjVbVYVYsLCwuXPrUk6aKGxP0B\nYG+Sa5JcCRwClp67s6qerqodVbWnqvYAp4ADVbW8IRNLkta0Ztyr6lngNuAk8AhwvKpOJ7k7yYGN\nHlCStH7bhyyqqhPAial9d11g7Q2XP5Yk6XL4CVVJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWp\nIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLU\nkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lq\naFDck+xP8miSlSR3rnL/7UnOJHk4yeeSvHL2o0qShloz7km2AUeBm4B9wOEk+6aWPQQsVtWvAp8E\n/nrWg0qShhty5n4dsFJVZ6vqGeBe4ODkgqq6r6q+N948Beyc7ZiSpPUYEvergccnts+N913IrcBn\nV7sjyZEky0mWz58/P3xKSdK6zPQN1SS3AIvAPavdX1XHqmqxqhYXFhZm+dSSpAnbB6x5Atg1sb1z\nvO8nJLkReBfwG1X1g9mMJ0m6FEPO3B8A9ia5JsmVwCFgaXJBktcAHwAOVNWTsx9TkrQea8a9qp4F\nbgNOAo8Ax6vqdJK7kxwYL7sHeAnwiSRfTrJ0gYeTJG2CIZdlqKoTwImpfXdN3L5xxnNJki6Dn1CV\npIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhL\nUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwl\nqSHjLkkNGXdJasi4S1JDxl2SGjLuktTQoLgn2Z/k0SQrSe5c5f6fSfLx8f33J9kz60ElScOtGfck\n24CjwE3APuBwkn1Ty24FnqqqXwb+BnjvrAeVJA035Mz9OmClqs5W1TPAvcDBqTUHgQ+Pb38SeH2S\nzG5MSdJ6DIn71cDjE9vnxvtWXVNVzwJPA780iwElSeu3fTOfLMkR4Mh487tJHt3M578MO4BvznuI\nTfaCPea8sC4qvmBf53kPcRleOWTRkLg/Aeya2N453rfamnNJtgMvBb41/UBVdQw4NmSw55Mky1W1\nOO85NpPH/MLgMfc15LLMA8DeJNckuRI4BCxNrVkC/mB8+3eB/6iqmt2YkqT1WPPMvaqeTXIbcBLY\nBnywqk4nuRtYrqol4J+BjyRZAb7N6F8AkqQ5GXTNvapOACem9t01cfv7wO/NdrTnlS13KWkGPOYX\nBo+5qXj1RJL68esHJKkh4z6W5MVJ/jPJV5KcTvKXq6y5PcmZJA8n+VySQX+S9Hw15Jgn1r4pSSXZ\n0n9lMPSYk7x5/FqfTvLRzZ5zlgb+bu9Ocl+Sh8a/3zfPY9ZZSrJtfDyfXuW+/l+ZUlX+jC5NBXjJ\n+PaLgPuB66fW/Cbwc+PbbwM+Pu+5N/qYx/ddBXwBOAUsznvuTXid9wIPAb843n75vOfehGM+Brxt\nfHsf8Ni8557Bcd8OfBT49Cr3/RHw/vHtQ1v9n+XVfjxzH6uR7443XzT+qak191XV98abpxj9zf+W\nNeSYx97D6PuCvr9Zs22Ugcf8VuBoVT01/t88uYkjztzAYy7gF8a3Xwp8Y5PG2xBJdgJvBP7pAkva\nf2WKcZ8w/r9xXwaeBP69qu6/yPJbgc9uzmQbZ61jTvJaYFdVfWYuA26AAa/ztcC1Sb6Y5FSS/Zs/\n5WwNOOZ3A7ckOcfoL+PevskjztrfAn8G/N8F7m//lSnGfUJV/aiqfo3RGfl1SV692roktwCLwD2b\nOd9GuNgxJ7kCeB9wx7zm2wgDXuftjC7N3AAcBv4xycs2d8rZGnDMh4EPVdVO4GZGn1vZkn1I8jvA\nk1X14Lxnmact+eJttKr6DnAf8FNnbEluBN4FHKiqH2z2bBvlAsd8FfBq4PNJHgOuB5a2+puqz7nI\n63wOWKqqH1bV14CvMor9lneRY74VOD5e8yXgxYy+g2Ureh1wYPw7ey/wW0n+dWrNj79W5WJfmbKV\nGfexJAvPnZ0l+VngDcB/T615DfABRmHf0tdhYe1jrqqnq2pHVe2pqj2M3mc4UFXLcxl4Boa8zsCn\nGJ21k2QHo8s0ZzdxzJkaeMxfB14/XvMqRnE/v5lzzkpVvbOqdo5/Zw8x+jqUW6aWtf/KlE39Vsjn\nuVcAHx7/x0muAI5X1aenvmbhHuAlwCfG7718vaoOzG3iyzfkmLsZcswngd9Ocgb4EfCOqtrKZ3VD\njvkORpef/pTRm6tv6Ra7F9pXpvgJVUlqyMsyktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPG\nXZIa+n/M+H556swx4QAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10b6a9860>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "rawData.sample(n=10000)\n",
-    "chisquare = np.random.chisquare(data)\n",
+    "rawData = np.random.chisquare([5],100)\n",
+    "chisquare = np.random.chisquare(5)\n",
+    "plt.hist(chisquare)\n",
     "plt.show()"
    ]
   },
