--- a/Unit 3 Lesson 3.4.ipynb
+++ b/Unit 3 Lesson 3.4.ipynb
@@ -170,6 +170,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.lines.Line2D at 0x10b816278>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAD8CAYAAABw1c+bAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEYVJREFUeJzt3WGsXGWdx/HvbwH3BRIBe0UEatUlJGgWJDdVd9HgqgiV\niBrXpTErKpuqkUST3ZjumqBx3+gaNVGMbJUGNSwSV1GyFKXratBE1EIKFAUppMbWSqu4IKsbt/rf\nF/c0GYeZ2+uc6Z1bn+8nmcw5z/Occ/49mf7uuc/MnJuqQpLUjj+ZdQGSpOVl8EtSYwx+SWqMwS9J\njTH4JakxBr8kNcbgl6TGGPyS1BiDX5Iac/SsCxhl1apVtWbNmj98w/vuW3g+44yp1iNpBfL/+++5\n/fbbf1ZVc0sZuyKDf82aNWzbtu0P3/C88xaev/GNaZYjaSXy//vvSfKjpY51qkeSGmPwS1JjDH5J\naozBL0mNMfglqTEGvyQ1xuCXpMYY/JLUGINfkhqzIr+5K0kHrdl408j2zz34cwAu6fp3vf8Vy1bT\nkc4rfklqjMEvSY0x+CWpMQa/JDXG4Jekxhj8ktQYg1+SGmPwS1JjDH5JaozBL0mN8ZYNkpoy7hYQ\nw/6YbwFxyOBPshm4CNhXVc/p2q4HzuiGHA/8d1WdPWLbXcAvgd8CB6pqfkp1S5ImtJQr/muAK4HP\nHGyoqr85uJzkQ8Aji2z/4qr62aQFSpKm65DBX1W3Jlkzqi9JgNcBfzXdsiRJh0vfN3dfCDxUVfeP\n6S/gliS3J9nQ81iSpCno++bueuC6RfrPrao9SZ4CbE1yb1XdOmpg94NhA8Dq1at7liVJGmfiK/4k\nRwOvAa4fN6aq9nTP+4AbgLWLjN1UVfNVNT83NzdpWZKkQ+gz1fNS4N6q2j2qM8mxSY47uAycD+zo\ncTxJ0hQcMviTXAd8Gzgjye4kl3VdlzA0zZPkaUm2dKsnAd9KcifwXeCmqvrK9EqXJE1iKZ/qWT+m\n/Y0j2n4CrOuWHwTO6lmfJGnKvGWDJDXG4Jekxhj8ktQYg1+SGmPwS1JjDH5JaozBL0mNMfglqTEG\nvyQ1xuCXpMYY/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGGPyS1Jil/LH1zUn2\nJdkx0PbeJHuSbO8e68Zse0GS+5LsTLJxmoVLkiazlCv+a4ALRrR/pKrO7h5bhjuTHAV8HLgQOBNY\nn+TMPsVKkvo7ZPBX1a3AwxPsey2ws6oerKrfAJ8DLp5gP5KkKeozx395kru6qaATRvSfAvx4YH13\n1zZSkg1JtiXZtn///h5lSZIWM2nwfwJ4FnA2sBf4UN9CqmpTVc1X1fzc3Fzf3UmSxpgo+Kvqoar6\nbVX9DvgkC9M6w/YApw2sn9q1SZJmaKLgT3LywOqrgR0jhn0POD3JM5I8AbgEuHGS40mSpufoQw1I\nch1wHrAqyW7gPcB5Sc4GCtgFvKUb+zTgU1W1rqoOJLkc+CpwFLC5qu45LP8KSdKSHTL4q2r9iOar\nx4z9CbBuYH0L8LiPekqSZsdv7kpSYwx+SWqMwS9JjTH4JakxBr8kNeaQn+qRpMNhzcabVvT+/ph5\nxS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5IaY/BLUmMMfklqjMEvSY0x+CWpMd6yQdJUeeuElc8r\nfklqzCGDP8nmJPuS7Bho+2CSe5PcleSGJMeP2XZXkruTbE+ybZqFS5Ims5Qr/muAC4batgLPqao/\nB34I/OMi27+4qs6uqvnJSpQkTdMhg7+qbgUeHmq7paoOdKu3AacehtokSYfBNOb43wzcPKavgFuS\n3J5kwxSOJUnqqdenepK8GzgAXDtmyLlVtSfJU4CtSe7tfoMYta8NwAaA1atX9ylLkrSIia/4k7wR\nuAh4fVXVqDFVtad73gfcAKwdt7+q2lRV81U1Pzc3N2lZkqRDmCj4k1wAvAt4ZVX9asyYY5Mcd3AZ\nOB/YMWqsJGn5LOXjnNcB3wbOSLI7yWXAlcBxLEzfbE9yVTf2aUm2dJueBHwryZ3Ad4Gbquorh+Vf\nIUlaskPO8VfV+hHNV48Z+xNgXbf8IHBWr+okSVPnN3clqTEGvyQ1xuCXpMYY/JLUGINfkhpj8EtS\nYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDVm\nScGfZHOSfUl2DLSdmGRrkvu75xPGbHtpN+b+JJdOq3BJ0mSWesV/DXDBUNtG4GtVdTrwtW799yQ5\nEXgP8DxgLfCecT8gJEnLY0nBX1W3Ag8PNV8MfLpb/jTwqhGbvhzYWlUPV9UvgK08/geIJGkZ9Znj\nP6mq9nbLPwVOGjHmFODHA+u7uzZJ0oxM5c3dqiqg+uwjyYYk25Js279//zTKkiSN0Cf4H0pyMkD3\nvG/EmD3AaQPrp3Ztj1NVm6pqvqrm5+bmepQlSVpMn+C/ETj4KZ1LgS+PGPNV4PwkJ3Rv6p7ftUmS\nZmSpH+e8Dvg2cEaS3UkuA94PvCzJ/cBLu3WSzCf5FEBVPQz8M/C97vG+rk2SNCNHL2VQVa0f0/WS\nEWO3AX83sL4Z2DxRdZKkqfObu5LUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGGPyS\n1BiDX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4Jekxhj8ktSYJf0FLklqzZqNNx1yzK73v2IZ\nKpm+ia/4k5yRZPvA49Ek7xwac16SRwbGXNG/ZElSHxNf8VfVfcDZAEmOAvYAN4wY+s2qumjS40iS\npmtac/wvAR6oqh9NaX+SpMNkWsF/CXDdmL4XJLkzyc1Jnj2l40mSJtQ7+JM8AXgl8PkR3XcAT6+q\ns4CPAV9aZD8bkmxLsm3//v19y5IkjTGNK/4LgTuq6qHhjqp6tKoe65a3AMckWTVqJ1W1qarmq2p+\nbm5uCmVJkkaZRvCvZ8w0T5KnJkm3vLY73s+ncExJ0oR6fY4/ybHAy4C3DLS9FaCqrgJeC7wtyQHg\n18AlVVV9jilJ6qdX8FfV/wBPHmq7amD5SuDKPseQJE2Xt2yQpMYY/JLUGINfkhpj8EtSYwx+SWqM\nwS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4Jekxhj8\nktQYg1+SGtM7+JPsSnJ3ku1Jto3oT5KPJtmZ5K4k5/Q9piRpcr3+2PqAF1fVz8b0XQic3j2eB3yi\ne5YkzcByTPVcDHymFtwGHJ/k5GU4riRphGlc8RdwS5IC/rWqNg31nwL8eGB9d9e2d3BQkg3ABoDV\nq1dPoSxJ07Zm402zLkFTMI0r/nOr6hwWpnTenuRFk+ykqjZV1XxVzc/NzU2hLEnSKL2Dv6r2dM/7\ngBuAtUND9gCnDayf2rVJkmagV/AnOTbJcQeXgfOBHUPDbgTe0H265/nAI1W1F0nSTPSd4z8JuCHJ\nwX39W1V9JclbAarqKmALsA7YCfwKeFPPY0qSeugV/FX1IHDWiParBpYLeHuf40iSpsdv7kpSYwx+\nSWqMwS9JjTH4JakxBr8kNWZaN2mTdATzVgxt8Ypfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcbg\nl6TGGPyS1BiDX5IaY/BLUmO8ZYMkTWipt7rY9f5XHOZK/jBe8UtSYyYO/iSnJfl6ku8nuSfJO0aM\nOS/JI0m2d48r+pUrSeqrz1TPAeDvq+qOJMcBtyfZWlXfHxr3zaq6qMdxJElTNPEVf1Xtrao7uuVf\nAj8ATplWYZKkw2Mqc/xJ1gDPBb4zovsFSe5McnOSZ0/jeJKkyfX+VE+SJwJfAN5ZVY8Odd8BPL2q\nHkuyDvgScPqY/WwANgCsXr26b1mSpDF6XfEnOYaF0L+2qr443F9Vj1bVY93yFuCYJKtG7auqNlXV\nfFXNz83N9SlLkrSIPp/qCXA18IOq+vCYMU/txpFkbXe8n096TElSf32mev4S+Fvg7iTbu7Z/AlYD\nVNVVwGuBtyU5APwauKSqqscxJUk9TRz8VfUtIIcYcyVw5aTHkCRNn7dskKTDbKXd2sFbNkhSYwx+\nSWqMwS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4Jek\nxhj8ktQYg1+SGmPwS1JjegV/kguS3JdkZ5KNI/r/NMn1Xf93kqzpczxJUn8TB3+So4CPAxcCZwLr\nk5w5NOwy4BdV9WfAR4APTHo8SdJ09LniXwvsrKoHq+o3wOeAi4fGXAx8ulv+d+AlSRb9A+2SpMOr\nT/CfAvx4YH131zZyTFUdAB4BntzjmJKkno6edQEHJdkAbOhWH0tyX4+dTaWmRawCfna4DzJlR2LN\nYN3L6Yiq+QUHFz5w0RFVd2dkzek3Gf70pQ7sE/x7gNMG1k/t2kaN2Z3kaOBJwM9H7ayqNgGbetSz\nbJJsq6r5WdfxhzgSawbrXk5HYs1wZNY965r7TPV8Dzg9yTOSPAG4BLhxaMyNwKXd8muB/6qq6nFM\nSVJPE1/xV9WBJJcDXwWOAjZX1T1J3gdsq6obgauBzybZCTzMwg8HSdIM9Zrjr6otwJahtisGlv8X\n+Os+x1ihjogpqSFHYs1g3cvpSKwZjsy6Z1pznHmRpLZ4ywZJaozBP0aS05J8Pcn3k9yT5B0jxpyX\n5JEk27vHFaP2tZyS7Epyd1fPthH9SfLR7jYadyU5ZxZ1DtV0xsA53J7k0STvHBqzIs51ks1J9iXZ\nMdB2YpKtSe7vnk8Ys+2l3Zj7k1w6aswy1vzBJPd2r4Ebkhw/ZttFX0+H05i635tkz8DrYN2YbRe9\nncwy13z9QL27kmwfs+3yneuq8jHiAZwMnNMtHwf8EDhzaMx5wH/MutahmnYBqxbpXwfcDAR4PvCd\nWdc8VN9RwE+Bp6/Ecw28CDgH2DHQ9i/Axm55I/CBEdudCDzYPZ/QLZ8ww5rPB47ulj8wqualvJ5m\nUPd7gX9YwmvoAeCZwBOAO4f/7y5nzUP9HwKumPW59op/jKraW1V3dMu/BH7A47+ZfCS6GPhMLbgN\nOD7JybMuasBLgAeq6kezLmSUqrqVhU+oDRq8NcmngVeN2PTlwNaqeriqfgFsBS44bIUOGFVzVd1S\nC9+mB7iNhe/hrChjzvVSLOV2MofFYjV3t6t5HXDdctSyGIN/Cbq7ij4X+M6I7hckuTPJzUmevayF\njVbALUlu774NPWwpt9qYpUsY/x9jpZ3rg06qqr3d8k+Bk0aMWcnn/c0s/BY4yqFeT7NweTdFtXnM\ntNpKPdcvBB6qqvvH9C/buTb4DyHJE4EvAO+sqkeHuu9gYUriLOBjwJeWu74Rzq2qc1i4a+rbk7xo\n1gUtVfdFwFcCnx/RvRLP9ePUwu/sR8xH5ZK8GzgAXDtmyEp7PX0CeBZwNrCXhamTI8V6Fr/aX7Zz\nbfAvIskxLIT+tVX1xeH+qnq0qh7rlrcAxyRZtcxlDte0p3veB9zAwq+9g5Zyq41ZuRC4o6oeGu5Y\nied6wEMHp8u6530jxqy4857kjcBFwOu7H1iPs4TX07Kqqoeq6rdV9Tvgk2PqWYnn+mjgNcD148Ys\n57k2+Mfo5uOuBn5QVR8eM+ap3TiSrGXhfI68F9FySHJskuMOLrPwBt6OoWE3Am/oPt3zfOCRgWmK\nWRt7RbTSzvWQwVuTXAp8ecSYrwLnJzmhm544v2ubiSQXAO8CXllVvxozZimvp2U19H7Uqxldz1Ju\nJ7PcXgrcW1W7R3Uu+7lejneQj8QHcC4Lv7LfBWzvHuuAtwJv7cZcDtzDwqcGbgP+YsY1P7Or5c6u\nrnd37YM1h4U/oPMAcDcwP+tz3dV1LAtB/qSBthV3rln4wbQX+D8W5o4vY+FW418D7gf+EzixGzsP\nfGpg2zcDO7vHm2Zc804W5sEPvrav6sY+Ddiy2OtpxnV/tnvd3sVCmJ88XHe3vo6FT+I9sJx1j6q5\na7/m4Gt5YOzMzrXf3JWkxjjVI0mNMfglqTEGvyQ1xuCXpMYY/JLUGINfkhpj8EtSYwx+SWrM/wOV\nyBsZABYEGAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10b67cc18>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "var1 = np.random.normal(5, .5, 100)\n",
+    "var2 = np.random.normal(10, 1, 100)\n",
+    "var3 = var1 + var2\n",
+    "plt.hist(var3)\n",
+    "mean = np.mean(var3)\n",
+    "st_dev = np.std(var3)\n",
+    "plt.axvline(x=mean, color='red')\n",
+    "plt.axvline(x=st_dev, color='red')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
